# VulkanModelViewer

./: .gitmodules  CMakeLists.txt  main.cpp
assets/shaders/blit/: blit.frag  blit.vert
assets/shaders/geometry/: geometry.frag  geometry.vert
assets/shaders/grid/: grid.frag  grid.vert
assets/shaders/sample/: sample.frag  sample.vert
assets/shaders/sample_alt/: sample.frag
cmake/: VulkanTools.cmake  clang_windows_cross.cmake  ksc.ps1
include/: Logging.h  pch.h  startup.h
include/core/: ConfigRegistry.h  Events.h  Screen.h  Utils.h  VulkanCore.hpp  VulkanDeviceObject.h
include/data/: Contexts.h  DataSmoother.h  Framebuffer.h  LimitedQueue.h  Mesh.h  MeshData.h  RenderPass.h  RenderPipeline.h  Shader.h  ShaderStage.h  Texture.h  TextureAtlas.h  TextureSampler.h  VertexAttribute.h  VertexDescription.h
include/data/render/: AbstractRenderer.h  BlitRenderer.h  GridRenderer.h  MeshRenderer.h  RendererStack.h
include/data/vk/: Camera.h  CommandBuffer.h  FBO.h
include/display/: Screen.h  SimpleScreen.h
include/ecs/: Component.h  Entity.h  Scene.h  Transform.h
include/ecs/components/: CameraComponent.h  FlyCamComponent.h  MeshComponent.h  MeshRendererComponent.h  NameComponent.h
include/example/: ExampleScreen.h
include/interop/: InteropHost.h  MetadataRecord.h  MetadataSet.h
include/platform/win32/: WindowHost.h
include/plugins/: PluginHost.h  PluginManager.h
include/plugins/api/: MeshData.h  Plugin.h
include/scene2d/: Actor.h  Event.h  EventListener.h  FontRenderer.h  Group.h  Scene2d.h  Stage.h
lib/: Logging.cpp  startup.cpp
lib/core/: ConfigRegistry.cpp  Screen.cpp  Utils.cpp  VulkanCore.cpp
lib/data/: Contexts.cpp  Framebuffer.cpp  Mesh.cpp  RenderPass.cpp  Shader.cpp  ShaderStage.cpp  Texture.cpp  TextureAtlas.cpp  TextureSampler.cpp  VertexAttribute.cpp  VertexDescription.cpp
lib/data/render/: AbstractRenderer.cpp  BlitRenderer.cpp  FlyCamComponent.cpp  GridRenderer.cpp  MeshRenderer.cpp  RendererStack.cpp
lib/data/vk/: Camera.cpp  CommandBuffer.cpp  FBO.cpp
lib/display/: Screen.cpp  SimpleScreen.cpp
lib/ecs/: Entity.cpp  Scene.cpp
lib/ecs/components/: CameraComponent.cpp  MeshComponent.cpp  MeshRendererComponent.cpp
lib/example/: ExampleScreen.cpp
lib/interop/: InteropHost.cpp  MetadataSet.cpp
lib/platform/win32/: WindowHost.cpp
lib/plugins/: KaitaiReader.cpp  PluginHost.cpp  PluginManager.cpp
lib/scene2d/: Event.cpp  FontRenderer.cpp
plugins/PMX/: CMakeLists.txt
plugins/PMX/gen_src/: mmd_pmx.ksy  vector_types.ksy
plugins/PMX/include/: PMXPlugin.h
plugins/PMX/include/loader/: PMXLoader.h
plugins/PMX/lib/: PMXPlugin.cpp
plugins/PMX/lib/loader/: PMXLoader.cpp
plugins/StandardTextures/: CMakeLists.txt
plugins/StandardTextures/include/: StdTexLoader.h  StdTexPlugin.h
plugins/StandardTextures/lib/: StdTexLoader.cpp  StdTexPlugin.cpp
tools/: Create-PluginProject.ps1
